SigmaCodebackup3rdSep/objects/Order_Usage__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Allocation__c</fullName>
        <label>Allocation</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocation_in_Picking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allocation in Picking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allocation_in_Sales_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allocation in Sales Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Allocate_in_picking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Allocate in picking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sigma_order__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Sigma order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_object__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard object</label>
        <type>Checkbox</type>
    </fields>
    <label>Order Usage</label>
</CustomObject>